fixed spacing in iphone

--- a/css/main.css
+++ b/css/main.css
@@ -1831,7 +1831,7 @@ MAIN-SS.CSS FOR FACE MASK HOME PAGE
 }
 #section-a .content-text {
     display: grid;
-    grid-column: 2/5;
+    grid-column: 2/6;
     grid-row: 2/4;
     width: 80%;
     text-align: center;
@@ -1915,23 +1915,25 @@ MAIN-SS.CSS FOR FACE MASK HOME PAGE
     #section-a .content-text {
         display: grid;
         grid-column: 2/7;
-        grid-row: 4/7;
+        grid-row: 3/8;
         text-align: center;
         font-size: 1.5em;
         color: #d8d8d8;
         align-items: center;
         justify-content: center;
+        margin-top: -1em;
 
     }
     #section-a .content-text2 {
         display: grid;
         grid-column: 8/13;
-        grid-row: 4/7;
+        grid-row: 3/8;
         text-align: center;
         font-size: 1.5em;
         color: #d8d8d8;
         align-items: center;
         justify-content: center;
+        margin-top: -1em;
         /* padding-top: .5em; */
     }
 
